--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8" />
-		<script src="libs/d3.v5.min.js"></script>
-		<script src="libs/d3-legend.js"></script>
-		<title></title>
-	</head>
-	<body>
-		<span style="position: absolute; left:200px">UCB Value Distribution</span>
-		<div id='container1' style="position: absolute; left:50px"></div>
-		<span style="position: absolute; left:720px">Customer Production Distribution</span>
-		<div id='container2' style="position: absolute; left:600px"></div>
-		<script src="js/main.js"></script>
-	</body>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>deck.gl Example</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body {margin: 0; font-family: sans-serif; width: 100vw; height: 100vh; overflow: hidden;}
+    .tooltip {pointer-events: none; position: absolute; z-index: 9; font-size: 12px; padding: 8px; background: #000; color: #fff; min-width: 160px; max-height: 240px; overflow-y: hidden;}
+  </style>
+</head>
+<body>
+<div id="app"></div>
+</body>
+<script type="text/javascript" src="app.js"></script>
+<script type="text/javascript">
+  App.renderToDOM(document.getElementById('app'));
+</script>
 </html>
